--- a/src/details.html
+++ b/src/details.html
@@ -22,7 +22,7 @@
     <!-- 详情页标题 -->
     <div class="navshow">
         <div class="wr1225">
-            <a href="http://localhost/js1907/the%20second/dist/index.html">首页</a><span>&gt;</span>
+            <a href="http://localhost/js1907/thesecond/dist/index.html">首页</a><span>&gt;</span>
             <a href="">全部商品</a><span>&gt;</span>
             <a class="navshow-title" href="">Robam/老板<span></span> </a>
         </div>
