--- a/src/shopcar.html
+++ b/src/shopcar.html
@@ -29,7 +29,7 @@
                             <img src="https://img.shoprobam.com/Public/pcnew_xb/svg/cart.svg" alt="" class="picture">
                             <div class="fl">
                                 <h2>购物车空空如也，赶紧去逛逛把！</h2>
-                                <a href="http://localhost/js1907/the%20second/dist/index.html">去逛逛</a>
+                                <a href="http://10.31.157.16/js1907/thesecond/dist/index.html">去逛逛</a>
                             </div>
                         </div>
                         <div class="car-none-title">推荐爆款</div>
