--- a/src/header.html
+++ b/src/header.html
@@ -15,10 +15,10 @@
             <li><a href="javascript:;">签到送积分</a></li>
             <li class="order">
                 <input type="hidden" value="">
-                <a href="http://localhost/js1907/the%20second/dist/shopcar.html" target="_blank" class="shopcar"><i></i>购物车<span class="num">0</span></a>
+                <a href="http://localhost/js1907/thesecond/dist/shopcar.html" target="_blank" class="shopcar"><i></i>购物车<span class="num">0</span></a>
             </li>
-            <li><a href="http://localhost/js1907/the%20second/dist/login.html">登录</a></li>
-            <li><a href="http://localhost/js1907/the%20second/dist/login.html">注册</a></li>
+            <li><a href="http://localhost/js1907/thesecond/dist/login.html">登录</a></li>
+            <li><a href="http://localhost/js1907/thesecond/dist/login.html">注册</a></li>
             <li class="order"><a href="javascript:;">我的订单</a></li>
         </ul>
     </div>
@@ -31,7 +31,7 @@
             </a>
         </div>
         <ul class="header-bottom-nav fl">
-            <li class=" li0"><a href="http://localhost/js1907/the%20second/dist/index.html" target="_blank">首页</a></li>
+            <li class=" li0"><a href="http://localhost/js1907/thesecond/dist/index.html" target="_blank">首页</a></li>
             <li class="all">
                 <a href="javascript:;" class="all-good" target="_blank">全部商品<i></i></a>
                 <div class="header-bottom-subnav clear">
